# PX-Receiver

./: .gitignore  README.md  package-lock.json  package.json
.codex/environments/: environment.toml
.github/workflows/: build-desktop.yml
apps/desktop/: eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/desktop/app/: globals.css  layout.tsx
apps/desktop/app/jobs/: page.tsx
apps/desktop/app/jobs/photo-zone/: page.tsx
apps/desktop/app/jobs/pzpro/: page.tsx
apps/desktop/app/jobs/unified/: page.tsx
apps/desktop/app/large-format/: page.tsx
apps/desktop/app/logs/: page.tsx
apps/desktop/components/: app-shell.tsx  dashboard-view 2.tsx  dashboard-view.tsx  jobs-view.tsx  large-format-view.tsx  logs-view.tsx  scanner-view.tsx  settings-view.tsx  sidebar.tsx  status-badge.tsx
apps/desktop/lib/: defaults.ts  receiver-contract.test.mts  receiver-contract.ts  tauri.ts  use-worker-store.tsx  utils.ts
apps/desktop/types/: app.ts
docs/: architecture.md
scripts/: build-sidecar.mjs  clean-next-conflicts.mjs  set-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  worker.rs
worker/: README.md  px-worker.spec  pyproject.toml
worker/px_receiver/: __main__.py  config.py  models.py  state.py  worker.py
worker/px_receiver/services/: backend.py  filesystem.py  http.py  large_format.py  printer.py  scanner.py  scanner_mac.py  shipstation.py  slack.py
worker/px_receiver_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
worker/tests/: test_receiver_contract.py
