[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "px-receiver-worker"
version = "0.3.2"
description = "Python sidecar for PX Receiver"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=11.0",
  "certifi>=2024.8.30",
  "pynput>=1.7; platform_system == 'Darwin'",
  "reportlab>=4.2",
  "pyserial>=3.5",
  "pywin32>=308; platform_system == 'Windows'"
]

[tool.setuptools.packages.find]
include = ["px_receiver*"]
